# Garmin-MCP-and-Training

./: .env_template  .gitignore  CHANGELOG.md  README.md  example.py
docs/: exercise_mapping.md  getting_started.md
python-garminconnect/: README.md  pyproject.toml
scripts/: connect_garmin.sh  install_mcp.sh  test_server.sh  workout_tools_guide.sh
training_examples/: push_sculpt_format.py  reacher_dos_biceps.py
