[project]
name = "garminconnect"
version = "0.2.28"
description = "Python 3 API wrapper for Garmin Connect"
authors = [
    {name = "Ron Klinkien", email = "ron@cyberjunky.nl"},
]
dependencies = [
    "garth>=0.5.13,<0.6.0",
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
keywords=["garmin connect", "api", "garmin"]
requires-python=">=3.10"
[project.urls]
"Homepage" = "https://github.com/cyberjunky/python-garminconnect"
"Bug Tracker" = "https://github.com/cyberjunky/python-garminconnect/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint.messages_control]
disable = ["too-few-public-methods"]

[tool.coverage.run]
source = ["garminconnect"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
